# ros-indigo-aruco-sample

./: README.md
src/aruco_test/: CMakeLists.txt  aruco_simple.cpp  package.xml  test1_node.cpp  test2_node.cpp
